folding-at-home/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: folding-at-home
  name: folding-at-home
  labels:
    app.kubernetes.io/name: folding-at-home
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: folding-at-home
  template:
    metadata:
      labels:
        app.kubernetes.io/name: folding-at-home
    spec:
      securityContext:
        runAsUser: 105 # fahclient(=105)
        runAsGroup: 105
      containers:
        - name: fah
          image: richstokes20/fah-covid:latest
          imagePullPolicy: Always
          command:
            - /usr/bin/FAHClient
            - --config=/config-volume/config.xml
            - --run-as=fahclient
            - --pid-file=/var/run/fahclient.pid
            - --user=Cybozu
            - --proxy=squid.internet-egress.svc:3128
            - --proxy-enable
            - --power=full
          resources:
            limits:
              cpu: 24 # How much CPU you wish to donate per node
              memory: 4Gi
            requests:
              cpu: 24
              memory: 4Gi
          volumeMounts:
            - mountPath: /config-volume
              name: config-volume
              readOnly: false
            - mountPath: /opt/fah
              name: opt
              readOnly: false
            - mountPath: /var/lib/fahclient
              name: var-lib
              readOnly: false
      volumes:
        - name: config-volume
          emptyDir: {}
        - name: opt
          emptyDir: {}
        - name: var-lib
          emptyDir: {}
      priorityClassName: folding-at-home
