folding-at-home/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: folding-at-home
  name: folding-at-home
  labels:
    app.kubernetes.io/name: folding-at-home
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: folding-at-home
  replicas: 2 # Set number of replicas to run - one replica per node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: folding-at-home
    spec:
      securityContext:
        runAsUser: 105 # fahclient(=105)
        runAsGroup: 105
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - folding-at-home
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: fah
          image: "richstokes20/fah-covid:latest"
          imagePullPolicy: Always
          command:
            - /usr/bin/FAHClient
            - --config
            - /etc/fahclient/config.xml
            - --run-as
            - fahclient
            - --pid-file=/var/run/fahclient.pid
            - --proxy
            - squid.internet-egress.svc:3128
            - --proxy-enable
          resources:
            limits:
              cpu: 24 # How much CPU you wish to donate per node
              memory: 48Gi
            requests:
              cpu: 24
              memory: 48Gi
          volumeMounts:
            - mountPath: /etc/fahclient
              name: etc
              readOnly: false
            - mountPath: /opt/fah
              name: opt
              readOnly: false
            - mountPath: /var/lib/fahclient
              name: var-lib
              readOnly: false
      volumes:
        - name: etc
          emptyDir: {}
        - name: opt
          emptyDir: {}
        - name: var-lib
          emptyDir: {}
      priorityClassName: folding-at-home
